--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,5 @@
-@media (min-width:992px){
-	
+@media (min-width:1192px){
+	/*992*/
 .navbar-brand {
     position: absolute;
     width: 108%;
@@ -175,6 +175,9 @@ h6{font-size:13px;font-weight:400;line-height: 150%;font-style: italic;}
 
  }
 
+ .inner {
+  padding-left: 15px;
+ }
  
 .dashed {
   border-width:1px;  
