--- a/style.css
+++ b/style.css
@@ -146,23 +146,28 @@ html, body {
 
 
 /* headers */
-h1, h2, h3, h4 {font-family:Lato, Arial, Helvetica, Sans-serif}
+h1, h2, h4 {font-family:Lato, Arial, Helvetica, Sans-serif}
 
 h1{padding-top:0px;font-size:20px;font-weight:700;}	/* headers */
 h2{padding-bottom:15px;font-size:16px;font-weight:400;background-color:;line-height: 200%;} /* sub-headers */
-h3{font-size:14px;font-weight:400;}
 h4{font-size:15px;font-weight:400;background-color:;line-height: 200%;}
-h5{font-size:24px;font-weight:400;background-color:;line-height: 150%;}
+/* h5{font-size:24px;font-weight:400;background-color:;line-height: 150%;} */
+
+h5{font-family:Courier New, Lato, Arial, Helvetica, Sans-serif}
+h5{color: #FF0000;font-size:14px;font-weight:400;line-height: 100%;}
+
+h6{font-family:Courier New, Lato, Arial, Helvetica, Sans-serif}
+h6{color: #000000;font-size:14px;font-weight:400;line-height: 100%;}
 
 .macroinner {
   background-color: #f9f9f9;
   padding-left: 15px;
   padding-top: 5px;
-  padding-bottom: 15px;
-  white-space: nowrap;
+  padding-bottom: 5px;
+  /* white-space: nowrap; */
   border-width:1px;  
   border-left-style:dashed;
-
+  
  }
  
 .inner {
