--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ html, body {
 h1, h2, h4 {font-family:Lato, Arial, Helvetica, Sans-serif}
 
 h1{padding-top:0px;font-size:20px;font-weight:700;}	/* headers */
-h2{padding-bottom:15px;font-size:16px;font-weight:400;background-color:;line-height: 200%;} /* sub-headers */
+h2{padding-bottom:10px;font-size:16px;font-weight:400;background-color:;line-height:200%;} /* sub-headers */
 h4{font-size:15px;font-weight:400;background-color:;line-height: 200%;}
 /* h5{font-size:24px;font-weight:400;background-color:;line-height: 150%;} */
 
@@ -162,12 +162,14 @@ h6{color: #000000;font-size:14px;font-weight:400;line-height: 100%;}
 .macroinner {
   background-color: #f9f9f9;
   padding-left: 15px;
+  padding-right: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
-  /* white-space: nowrap; */
   border-width:1px;  
   border-left-style:dashed;
-  
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
  }
  
 .inner {
@@ -177,7 +179,6 @@ h6{color: #000000;font-size:14px;font-weight:400;line-height: 100%;}
 .dashed {
   border-width:1px;  
   border-bottom-style:dashed;
-
  }	
 
  
